<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/saleFragment">

    <fragment
        android:id="@+id/refundFragment"
        android:name="com.example.day7.screen.fragment.RefundFragment"
        android:label="@string/label_refund"
        tools:layout="@layout/fragment_refund">
        <action
            android:id="@+id/action_refundFragment_to_saleFragment"
            app:destination="@id/saleFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_refundFragment_to_revenueFragment"
            app:destination="@id/revenueFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/revenueFragment"
        android:name="com.example.day7.screen.fragment.RevenueFragment"
        android:label="@string/label_revenue"
        tools:layout="@layout/fragment_revenue">
        <action
            android:id="@+id/action_revenueFragment_to_refundFragment"
            app:destination="@id/refundFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_revenueFragment_to_saleFragment"
            app:destination="@id/saleFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/saleFragment"
        android:name="com.example.day7.screen.fragment.SaleFragment"
        android:label="@string/label_sale"
        tools:layout="@layout/fragment_sale">
        <action
            android:id="@+id/action_saleFragment_to_refundFragment"
            app:destination="@id/refundFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_saleFragment_to_revenueFragment"
            app:destination="@id/revenueFragment"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>